--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,10 +1,10 @@
 # Archivo para la configuración de las crendeciales de comercio
 #
 # Identificador de la tienda
-merchantCode=CHANGE_ME_USER_ID
+merchantCode=CHANGE_ME
 # Clave de Test o Producción
-password=CHANGE_ME_USER_ID
+password=CHANGE_ME
 # Clave Pública de Test o Producción
-publicKey=CHANGE_ME_USER_ID
+publicKey=CHANGE_ME
 # Clave HMAC-SHA-256 de Test o Producción
-hmacKey=CHANGE_ME_USER_ID
+hmacKey=CHANGE_ME
