--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -3,8 +3,8 @@
 # Identificador de la tienda
 merchantCode=CHANGE_ME
 # Clave de Test o Producción
-password=CHANGE_ME
+password=CHANGE_ME_PASSWORD
 # Clave Pública de Test o Producción
-publicKey=CHANGE_ME
+publicKey=CHANGE_ME_PUBLIC_KEY
 # Clave HMAC-SHA-256 de Test o Producción
-hmacKey=CHANGE_ME
+hmacKey=CHANGE_ME_HMAC_SHA_256
