--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,7 +1,7 @@
 # Archivo para la configuración de las crendeciales de comercio
 #
 # Identificador de la tienda
-merchantCode=CHANGE_ME
+merchantCode=CHANGE_ME_USER_ID
 # Clave de Test o Producción
 password=CHANGE_ME_PASSWORD
 # Clave Pública de Test o Producción
